--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "someone-github-stars",
   "displayName": "someone-github-stars",
-  "description": "获取某人github关注的stars",
+  "description": "获取github上某个用户关注的stars",
+  "keywords": ["vscode", "plugin", "github", "stars"],
+  "publisher": "mybells",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.41.0"
   },
   "categories": [
+    "Extension Packs",
     "Other"
   ],
   "activationEvents": [
@@ -17,7 +20,7 @@
     "commands": [
       {
         "command": "extension.githubStars",
-        "title": "github stars"
+        "title": "Github Stars"
       }
     ]
   },
@@ -37,5 +40,13 @@
   },
   "dependencies": {
     "axios": "^0.19.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/mybells/vscode-plugin-getsomeonestars/issues"
+  },
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/mybells/vscode-plugin-getsomeonestars"
+  },
+  "homepage": "https://github.com/mybells/vscode-plugin-getsomeonestars/blob/master/README.md"
 }
